corrected text input field size on mobile

--- a/follow-me/src/components/NewUser.css
+++ b/follow-me/src/components/NewUser.css
@@ -50,15 +50,14 @@ textarea#post {
 @media only screen and (max-width: 700px) {
   form,
   label,
-  #username,
-  #bio,
-  #profilePic,
-  #post {
+  textarea#post,
+  input#username,
+  textarea#bio,
+  input#profilePic {
     display: block;
     text-align: center;
-    width: 100%;
     max-width: 350px;
-    font-size: 25px;
+    font-size: 20px;
     color: white;
   }
 }
